feat: 적용한 리눅스/컨테이너 하드닝
웹 컨테이너(userdata-web.sh) 실행 옵션 강화
기존:
docker run -d --name sigbang-web --restart=always --env-file "$ENV_FILE" -p 3000:3000 "$DOCKER_IMAGE"
변경 후:
--security-opt no-new-privileges: 컨테이너 내부에서 setuid/setcap 등을 써도 권한 상승 불가.
--cap-drop ALL: 리눅스 capability 전부 제거 (웹앱이 특별 권한을 거의 쓰지 않으므로 안전).
--tmpfs /tmp:rw,noexec,nosuid,size=64m: /tmp 를 메모리 기반 영역 + noexec 로 마운트해서,
마이너처럼 /tmp 아래 내려온 바이너리는 실행 자체가 안 되도록 했습니다.
API 컨테이너(userdata.sh)에도 동일 하드닝 적용
sigbang-api 컨테이너도 같은 옵션(no-new-privileges, cap-drop ALL, tmpfs /tmp:...)으로 실행되도록 수정했습니다.
웹과 API 둘 다 /tmp 실행 불가 + 권한 상승 방지 + capability 제거 상태로 올라갑니다.
SSM 배포 경로(deploy-web-ec2.yml)와 일관성 유지
GitHub Actions에서 SSM RunCommand로 웹을 재배포할 때 사용하는 docker run 명령에도
동일하게 --security-opt no-new-privileges --cap-drop ALL --tmpfs /tmp:rw,noexec,nosuid,size=64m 를 추가했습니다.
그래서 초기 userdata로 부팅할 때와, 이후 SSM 배포로 교체할 때 모두 같은 하드닝이 유지됩니다.
이 변경들은 애플리케이션 기능에 영향은 거의 없으면서, /tmp 기반 코인 마이너 실행과 컨테이너 내부 권한 상승을 상당히 어렵게 만들어 줍니다.

--- a/.github/workflows/deploy-web-ec2.yml
+++ b/.github/workflows/deploy-web-ec2.yml
@@ -114,7 +114,7 @@ jobs:
                 "sudo docker ps --filter \\"publish=$EXPOSE_PORT\\" -q | xargs -r sudo docker rm -f || true",
                 "sudo docker rm -f \\"$CONTAINER_NAME\\" || true",
                 "[ -f /home/ubuntu/web.env ] && ENV_FILE_ARG='--env-file /home/ubuntu/web.env' || ENV_FILE_ARG=''",
-                "sudo docker run --pull=always -d --name \\"$CONTAINER_NAME\\" --restart=always $ENV_FILE_ARG -p $EXPOSE_PORT:3000 \\"$IMAGE\\"",
+                "sudo docker run --pull=always -d --name \\"$CONTAINER_NAME\\" --restart=always $ENV_FILE_ARG -p $EXPOSE_PORT:3000 --security-opt no-new-privileges --cap-drop ALL --tmpfs /tmp:rw,noexec,nosuid,size=64m \\"$IMAGE\\"",
                 "sleep 3",
                 "echo '[deploy-web-ssm] Started $CONTAINER_NAME with $IMAGE' | sudo tee -a /var/log/userdata-web.log >/dev/null",
                 "curl -fsS http://localhost:$EXPOSE_PORT/robots.txt >/dev/null",
