chore: 변경: SSM 문서 JSON에 아래 추가/변경 변경 내용 (핵심) 기존: describe-instances로 IID 뽑아서 InstanceIds: ["$IID"] → ASG 2대면 깨짐 + 한 대만 배포 변경: SSM 문서 JSON에 아래 추가/변경 "Targets": [{"Key":"tag:Name","Values":["${TARGET_NAME_TAG}"]}] "MaxConcurrency": "1" (한 번에 한 대씩) "MaxErrors": "0" (한 대라도 실패하면 중단) 주의/운영 포인트 이 방식은 SSM Managed Instance로 잡힌 인스턴스만 대상이 됩니다(현재 인프라 구성이 이미 그 전제라 OK). 만약 AZ별로 동시에 1대씩 등 더 빠른 롤링을 원하면 MaxConcurrency를 "50%" 같은 값으로 조절하면 됩니다. 원하시면 다음도 같이 넣어드릴까요? 배포 완료 대기: aws ssm wait command-executed + 결과 집계(성공/실패 인스턴스 목록 출력) ALB/헬스 기준 롤링 강화: 인스턴스 단위로 헬스 통과 확인 후 다음으로 진행

--- a/.github/workflows/api-deploy.yml
+++ b/.github/workflows/api-deploy.yml
@@ -125,20 +125,19 @@ jobs:
           EXPOSE_PORT: "3000"
         run: |
           set -eo pipefail
-          echo "Resolving API instance by tag Name=${TARGET_NAME_TAG}"
-          IID=$(aws ec2 describe-instances \
-            --filters "Name=tag:Name,Values=${TARGET_NAME_TAG}" "Name=instance-state-name,Values=running" \
-            --query "Reservations[].Instances[].InstanceId" --output text --region "$AWS_REGION")
-          if [ -z "$IID" ]; then
-            echo "No running instance found with Name=${TARGET_NAME_TAG}"
-            exit 1
-          fi
-          echo "Target instance: $IID"
+          echo "Deploying to ALL instances with tag Name=${TARGET_NAME_TAG} (rolling via SSM)"
           cat >ssm-deploy-api.json <<EOF
           {
             "DocumentName": "AWS-RunShellScript",
             "Comment": "Deploy sigbang-api container via SSM",
-            "InstanceIds": ["$IID"],
+            "Targets": [
+              {
+                "Key": "tag:Name",
+                "Values": ["${TARGET_NAME_TAG}"]
+              }
+            ],
+            "MaxConcurrency": "1",
+            "MaxErrors": "0",
             "Parameters": {
               "commands": [
                 "set -euo pipefail",
@@ -148,7 +147,7 @@ jobs:
                 "ENV_FILE='/home/ubuntu/.env'",
                 "AWS_REGION='${AWS_REGION}'",
                 "SSM_PREFIX='${SSM_PREFIX}'",
-                "echo '[deploy-api-ssm] Refreshing env from SSM /'$SSM_PREFIX | sudo tee -a /var/log/userdata.log >/dev/null || true",
+                "echo \"[deploy-api-ssm] Refreshing env from SSM /$SSM_PREFIX\" | sudo tee -a /var/log/userdata.log >/dev/null || true",
                 "sudo rm -f \\"$ENV_FILE\\" || true",
                 "sudo touch \\"$ENV_FILE\\"",
                 "aws ssm get-parameters-by-path --path \\"/$SSM_PREFIX\\" --with-decryption --recursive --region \\"$AWS_REGION\\" | jq -r '.Parameters // [] | .[] | [.Name, .Value] | @tsv' | while IFS=$'\\t' read -r name value; do key=$(basename \\"$name\\"); printf '%s=%s\\n' \\"$key\\" \\"$value\\" | sudo tee -a \\"$ENV_FILE\\" >/dev/null; done",
